[gd_scene load_steps=7 format=3 uid="uid://c7k6aovf64m5c"]

[ext_resource type="Script" path="res://scenes/bonus/bonus_results.gd" id="1_xykog"]
[ext_resource type="Texture2D" uid="uid://dmnei1n55q0js" path="res://assets/images/ui/star_get.png" id="2_3lo4q"]
[ext_resource type="Texture2D" uid="uid://bmky0cm8q543k" path="res://assets/images/ui/too_bad.png" id="3_b6772"]
[ext_resource type="AudioStream" uid="uid://724oebl6vrdu" path="res://assets/sfx/accept.wav" id="4_dw3yo"]
[ext_resource type="AudioStream" uid="uid://cnwuokyyhhe8g" path="res://assets/sfx/complete.wav" id="4_ke74n"]
[ext_resource type="AudioStream" uid="uid://c7st61t5rtxa7" path="res://assets/sfx/toobad.wav" id="5_6tbbe"]

[node name="BonusResults" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xykog")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0.324219, 0, 0.75, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0.238281, 0.996094, 1)

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0, 0.355469, 0.992188, 1)

[node name="ColorRect4" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 256.0
offset_bottom = 240.0
color = Color(0.298039, 0.160784, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = 120.0
offset_right = 189.0
offset_bottom = 146.0
theme_override_constants/separation = 10

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="StarGet" type="Sprite2D" parent="VBoxContainer/CenterContainer/Control"]
position = Vector2(0, -8)
texture = ExtResource("2_3lo4q")
vframes = 3

[node name="TooBad" type="Sprite2D" parent="VBoxContainer/CenterContainer/Control"]
visible = false
position = Vector2(0, -8)
texture = ExtResource("3_b6772")

[node name="Success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ke74n")
bus = &"Music"

[node name="Fail" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_6tbbe")
bus = &"Music"

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="Skip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_dw3yo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
